welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:8: error: ';' expected but 'else' found.
	else return die1+die2
        ^